--- a/ui/settings.css
+++ b/ui/settings.css
@@ -1,7 +1,11 @@
+/* my hope is that someone will see my awful ui and make a pull request with a better ui so then i can be like yay awesome looking ui no way */
+/* Gosh i should never be a web developer goodness gracious */
+
 html {
-	position: relative;
+	background: fixed;
 	background-image: url("img/bg.jpg");
 	background-size: 100%;
+	background-position: 0px 0px;
 }
 
 /* Fonts */
@@ -9,10 +13,11 @@ p,
 footer,
 td,
 h2 {
-	font-family: 'Montserrat';
+	font-family: 'Inter';
 	font-weight: bold;
 	cursor: default;
 }
+
 
 h2 {
 	text-align: center;
@@ -26,8 +31,8 @@ h2 {
 	font-size: 20px;
 }
 
-footer a:any-link {
-	color: #222543;
+a:any-link {
+	color: #010852;
 }
 
 /* Credits text */
@@ -37,6 +42,7 @@ footer {
 	margin-bottom: 10px;
 	margin-left: 10px;
 	bottom: 0;
+	right: 10px;
 	text-shadow: #000000ff 0px 0px 10px;
 	color: white;
 }
@@ -63,16 +69,16 @@ div.content_area {
 	position: relative;
 	display: inline-block;
 	background-color: #536079;
-	height: 15px;
-	width: 30px;
+	height: 20px;
+	width: 40px;
 	border: #00000091;
 	border-style: solid;
-	border-radius: 20px;
+	border-radius: 10px;
 	border-width: 1px;
 }
 
 
-/* slider switch thing */
+/* bg of the slider cuz we can't change the background-color property of the slider class for some reason💔 */
 .slider_switch {
 	position: absolute;
 	cursor: pointer;
@@ -89,17 +95,17 @@ div.content_area {
 .slider_switch:before {
 	position: absolute;
 	content: "";
-	height: 15px;
-	width: 15px;
+	height: 20px;
+	width: 20px;
 	border-radius: 16px;
 	left: 0%;
 	background-color: #ffda84;
 
-	transition: .3s cubic-bezier(.63, .06, .81, .36);
+	transition: .3s ease-out;
 }
 
 .inv-checkbox:checked+.slider_switch:before {
-	transform: translateX(100%);
+	transform: translateX(20px);
 	background-color: #fafafa;
 	box-shadow: #85ff8b 0px 0px 10px;
 }
@@ -115,21 +121,58 @@ div.content_area {
 
 /* Slider switch thing */
 
-table {
+.short_conf_area table {
 	position: relative;
 
 	background-color: #4F5F794f;
-	border-radius: 20px;
+	border-radius: 5px;
 	border-style: solid;
 	border-width: 2px;
 	border-color: #2020202c;
 	margin: auto;
 	padding: 7px 7px 7px 7px;
-	border-spacing: 0;
+	border-spacing: 0 5px;
 }
 
-td:first-child {
+.short_conf_area td:first-child {
 	padding-right: 350px;
+}
+
+#list_area {
+	position: relative;
+
+	background-color: #4f5f79a4;
+	border-radius: 5px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #2020202c;
+	border-spacing: 0 5px;
+	margin: auto;
+}
+
+#list_area tr:nth-child(even) {
+	background-color: #1b1b1b56;
+}
+
+#list_area th:first-child {
+	min-width: 200px;
+}
+
+#list_area th:last-child {
+	min-width: 100px;
+}
+
+#list_area td:first-child {
+	text-align: center;
+}
+
+#list_area td {
+	color: #fff;
+	font-size: smaller;
+}
+
+#list_area td:last-child {
+	text-align: center;
 }
 
 input[type=text] {
@@ -143,11 +186,98 @@ input[type=text] {
 	opacity: 70%;
 }
 
-input[type="button"] {
-	width: 20px;
-	height: 20px;
+#addsite-button {
+	background-color: #3d4380;
+	width: 25px;
+	height: 25px;
 	outline: none;
 	border: none;
-	border-radius: 20px;
+	border-radius: 10px;
+	transition: .2s ease-out;
+	color: #ffffff;
+}
 
+#addsite-button:active {
+	background-color: #85ff8b;
+}
+
+#addsite-button:hover {
+	box-shadow: #000000 0px 0px 20px;
+	border-radius: 5px;
+}
+
+/* Tooltip container */
+.tooltip {
+	position: relative;
+	display: inline-block;
+}
+
+/* Tooltip text */
+.tooltip {
+	position: relative;
+	display: inline-block;
+
+}
+
+.tooltip .tooltiptext {
+	font-weight: lighter;
+	visibility: hidden;
+	width: 250px;
+	background-color: #282d36ce;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 0;
+	position: absolute;
+	z-index: 1;
+	left: 105%;
+	margin-bottom: 5px;
+
+	/* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
+	opacity: 0;
+	transition: .4s ease-in;
+}
+
+.tooltip:hover .tooltiptext {
+	visibility: visible;
+	transform: translateY(-5px);
+	opacity: 1;
+}
+
+.opt_button {
+	width: 20px;
+	height: 20px;
+	background-color: #f15353;
+	color: #fff;
+	border: none;
+	outline: none;
+	border-radius: 10px;
+	transition: .1s ease-out;
+}
+
+.opt_button:hover {
+
+	background-color: #e02e2e;
+	transform: translateY(-3px);
+	width: 40px;
+	box-shadow: #0000009a 0px 5px 10px;
+}
+
+.opt_button:active {
+	box-shadow: #ff9595 0px -2px 8px,
+		inset #ff9595 0px -2px 8px;
+	transform: translateY(3px);
+}
+
+#site_prompt {
+	position: relative;
+	max-width: max-content;
+	margin: auto;
+	margin-top: 15px;
+}
+
+#site_prompt p {
+	margin-bottom: 5px;
+	margin-top: 15px;
+	margin-right: 0px;
 }
