--- a/page/styles/identifiers.css
+++ b/page/styles/identifiers.css
@@ -1,9 +1,7 @@
-/* my hope is that someone will see my awful ui and make a pull request with a better ui so then i can be like yay awesome looking ui no way */
-
-
 /*
- * Site prompt div
- * */
+* Site prompt div
+* */
+/*¿reg*/
 #site_prompt {
 	position: relative;
 	max-width: max-content;
@@ -16,39 +14,19 @@
 	margin-top: 15px;
 	margin-right: 0px;
 }
+/*?reg*/
 
 
-
+/*
+* Short config area
+* where all the switches and stuff are.
+* */
+/*¿reg*/
 #short_conf_area h2 {
 	margin-top: 0px;
 	margin-bottom: 20px;
 	text-align: center;
 	font-size: 32px;
-}
-
-#list_area h2 {
-	position: relative;
-	margin: auto;
-	text-align: center;
-	font-size: 20px;
-}
-
-#logo_area img {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#content_area {
-	padding: 2%;
-	max-width: 70%;
-	background-color: #323c4d7e;
-	border-radius: 12px;
-	margin: auto;
-	box-shadow: #000000c9 0px 0px 20px;
-	border-style: solid;
-	border-color: floralwhite;
-	border-width: 2px;
 }
 
 #short_conf_area table {
@@ -64,8 +42,20 @@
 	border-spacing: 0 5px;
 }
 
+/* Some padding for the name of the config */
 #short_conf_area td:first-child {
 	padding-right: 420px;
+}
+/*?reg*/
+
+
+/* The table with the user's site list*/
+/*¿reg*/
+#list_area h2 {
+	position: relative;
+	margin: auto;
+	text-align: center;
+	font-size: 20px;
 }
 
 #list_area {
@@ -105,8 +95,40 @@
 #list_area td:last-child {
 	text-align: center;
 }
+/*?reg*/
 
 
+/* The logo at the top */
+/*¿reg*/
+#logo_area img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+/*?reg*/
+
+
+/*
+* The big box everything is in
+* */
+/*¿reg*/
+#content_area {
+	padding: 2%;
+	max-width: 70%;
+	background-color: #323c4d7e;
+	border-radius: 12px;
+	margin: auto;
+	box-shadow: #000000c9 0px 0px 20px;
+	border-style: solid;
+	border-color: floralwhite;
+	border-width: 2px;
+}
+/*?reg*/
+
+
+/* The button that's next to the site prompt
+* */
+/*¿reg*/
 #addsite-button {
 	background-color: #3d4380;
 	width: 25px;
@@ -126,5 +148,5 @@
 	box-shadow: #000000 0px 0px 20px;
 	border-radius: 5px;
 }
-
+/*?reg*/
 
