--- a/page/styles/classes.css
+++ b/page/styles/classes.css
@@ -1,7 +1,119 @@
 
-/* TODO figure out a good design for one */
-/* The checkbox design i'm making */
+/* The switch design, here's a lil explanation because it's a lil weird.
+ * It we make 2 pseudo elements, the ::before and ::after, and we fade the ::after out
+ * and the ::before in , creating the illusion that we're fading into a gradient*/
 /*¿reg*/
+
+/* The checkbox that marks the logic */
+.inv-checkbox {
+	display: none;
+}
+
+/* The hitbox of the slider */
+.switch-container {
+	position: relative;
+	display: inline-block;	
+	
+	width: 48px;
+	height: 27px;
+	border-radius: var(--soft-radius)
+}
+
+/* The background of the slider */
+.switch-bg {
+	position: absolute;
+	display: inline-block;
+	
+	width: 100%;
+	height: 100%;
+	border-radius: var(--medium-radius);
+	
+	inset: 0;
+	z-index: 2;
+	background:	var(--clr-switch-off);
+	transition: .4s ease-out;
+}
+
+/* We turn this one off when the switch is checked */
+.switch-bg::after,
+.switch-bg::before
+{
+	content: '';
+	display: inline-block;
+	position: absolute;
+	
+	left: 10%;
+	top: 14%;
+	
+	border-radius: var(--medium-radius);
+	
+	height: 70%;
+	width: 40%;
+	z-index: 4;
+	
+	background: 
+		var(--clr-button-off);
+	
+	transition: .4s ease-out;
+}
+
+/* We turn this one on when it is checked */
+.switch-bg::before
+{	
+	z-index: 3;
+	opacity: 0;
+	
+	background: 
+		linear-gradient(45deg, var(--clr-button-on));	
+}
+
+.switch-border
+{
+	position: absolute;
+	display: inline-block;
+	
+	background: linear-gradient(45deg, var(--clr-hlhl-gradient));
+	margin: auto;
+	
+	z-index: 1;
+	border-radius: var(--medium-radius);
+	
+	inset: 0;
+	
+	width: 90%;
+	height: 90%;
+	
+	transition: .4s ease-out;
+}
+
+/* I'm sure there's a better way to create a 
+ * transition into a gradient but i like can't be bothered */
+.inv-checkbox:checked + .switch-bg::after
+{
+	opacity: 0;
+}
+
+.inv-checkbox:checked + .switch-bg::before
+{
+	opacity: 1;
+}
+
+.inv-checkbox:checked + .switch-bg::before,
+.inv-checkbox:checked + .switch-bg::after
+{
+	transform: translateX(18px);
+}
+
+.inv-checkbox:checked + .switch-bg
+{
+	background: var(--clr-switch-on)
+}
+
+.inv-checkbox:checked ~ .switch-border
+{
+	transform: scale(1.25, 1.25);
+}
+
 
 /*?reg*/
 
@@ -67,15 +179,15 @@
 /* for the leftmost button */
 .navbar-left
 {
-	border-top-left-radius: 15px;
-	border-bottom-left-radius: 20px;
+	border-top-left-radius: var(--top-corner);
+	border-bottom-left-radius: var(--bottom-corner);
 }
 
 /* same thing as above but for the rightmost one */
 .navbar-right
 {
-	border-top-right-radius: 15px;
-	border-bottom-right-radius: 20px;
+	border-top-right-radius: var(--top-corner);
+	border-bottom-right-radius: var(--bottom-corner);
 }
 
 
@@ -95,4 +207,64 @@
 
 
 /*?reg*/
+
+
+/* Tooltips */
+/*¿reg*/
+.tooltip-container
+{
+	width: fit-content;
+	position: relative;
+	text-align: left;
+}
+
+.tooltip-text
+{
+	position: absolute;
+	display: inline-block;
+	
+	width: max-content;
+	max-width: 250px;
+	height: fit-content;
+	
+	border-radius: var(--soft-radius);
+	
+	padding: 0.5rem;	
+	left: 105%;
+	z-index: 10;
+	
+	text-align: center;
+	
+	background-color: var(--clr-tooltipbg);
+	
+	opacity: 0;
+	visibility: hidden;
+	
+	transition: .4s ease-in;
+}
+
+.tooltip-text::after
+{
+	content: "";
+	
+	position: absolute;
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	
+	border-radius: var(--hard-radius);
+	background-color: var(--clr-tooltipbg);
+	left: -10px;
+	top: 0;
+}
+
+.tooltip-container:hover > .tooltip-text
+{
+	
+	visibility: visible;
+	transform: translateX(5px);
+	opacity: 1;
+}
+/*?reg*/
+
 
