--- a/page/styles/ids.css
+++ b/page/styles/ids.css
@@ -31,6 +31,11 @@
 
 /* The toggles section */
 /*¿reg*/
+#toggles-section {
+	width: 100%;
+	height: 100%;
+}
+
 #toggles-section-bg
 {
 	position: relative;
