--- a/page/styles/vars.css
+++ b/page/styles/vars.css
@@ -11,9 +11,9 @@
 	--clr-hlhl-gradient: #ff0000, #0040ff;
 	
 	--clr-switch-off: hsl(0, 0%, 10%);
-	--clr-switch-on: hsl(0, 0%, 30%);
+	--clr-switch-on: hsl(0, 0%, 70%);
 	--clr-button-off: hsl(0, 0%, 30%);
-	--clr-button-on: hsl(0, 0%, 10%);
+	--clr-button-on: var(--clr-hl-gradient);
 	
 	--soft-radius: 7px;
 	--medium-radius: 16px;
