--- a/page/styles/classes.css
+++ b/page/styles/classes.css
@@ -11,6 +11,7 @@
 
 /* The hitbox of the slider */
 .switch-container {
+	cursor: pointer;
 	position: relative;
 	display: inline-block;	
 	
@@ -332,3 +333,59 @@ body.preload *
 }
 /*?reg*/
 
+/* Preset buttons */
+/* ¿reg */
+.preset-hitbox::before,
+.preset-hitbox::after
+{
+	transition: .5s ease-out;
+	content: '';
+
+	position: absolute;
+	display: block;
+	inset: 0;
+
+	border-radius: var(--hard-radius);
+}
+
+.preset-hitbox::before {
+	z-index: 2;
+	background: hsl(from var(--clr-placeholderbg) h s calc(l - 4));
+}
+
+.preset-hitbox::after {
+	opacity: 0;
+	z-index: 1;
+	background: 
+		linear-gradient(45deg, var(--clr-hlhl-gradient));
+	scale: 0 1;
+	filter: sepia(50%);
+}
+
+.preset-hitbox {
+	border-radius: var(--hard-radius);
+	border: dotted 2px var(--clr-placeholderbg-hover);
+}
+
+.preset-name {
+	transition: .5s ease-out;
+}
+
+
+.preset-hitbox:hover {
+
+	> .preset-name {
+		color: black;
+	}
+
+	&::before {
+		scale: 0 1;
+		opacity: 0;
+	}
+
+	&::after {
+		opacity: 1;
+		scale: 1 1;
+	}
+}
+/* ?reg */
