Changed placeholder's border for an outline and fixed issues that came from it.

--- a/page/styles/classes.css
+++ b/page/styles/classes.css
@@ -364,7 +364,7 @@ body.preload *
 
 .preset-hitbox {
 	border-radius: var(--hard-radius);
-	border: dotted 2px var(--clr-placeholderbg-hover);
+	outline: dotted 2px var(--clr-placeholderbg-hover);
 }
 
 .preset-name {
