--- a/page/styles/ids.css
+++ b/page/styles/ids.css
@@ -93,7 +93,7 @@
 	
 	background-color: var(--clr-placeholderbg);
 	font-size: 28px;
-	font-family: "Roboto Condensed", sans-serif;
+	font-family: "Roboto Flex", sans-serif;
 	font-weight: 400;
 	
 	
@@ -132,7 +132,7 @@
 		background-color: hsl( from var(--clr-placeholderbg) h s calc(l - 2));
 		border-radius: var(--soft-radius);
 
-		font-family: "Roboto Condensed", sans-serif;
+		font-family: "Roboto Flex", sans-serif;
 	}
 }
 
