--- a/page/styles/ids.css
+++ b/page/styles/ids.css
@@ -1,32 +1,32 @@
-
 /* Titlecard */
 /*¿reg*/
 #title {
 	position: relative;
 	width: fit-content;
-	
+
 	font-family: "Playfair Display", serif;
 	font-weight: 400;
 	font-optical-sizing: auto;
 	font-size: 46px;
 	text-align: center;
-	
+
 	margin: auto;
 	margin-bottom: calc(0.7rem + 2%);
 }
 
 #title::before {
 	content: '';
-	
+
 	position: absolute;
 	display: inline-block;
 	inset: 100% 0 0 25%;
-	
+
 	width: 50%;
 	height: 1rem;
 	clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 	background: linear-gradient(45deg, var(--clr-hl-gradient));
 }
+
 /*?reg*/
 
 /* The toggles section */
@@ -36,34 +36,31 @@
 	height: 100%;
 }
 
-#toggles-section-bg
-{
+#toggles-section-bg {
 	position: relative;
-	background-color: var(--clr-divbg);	
-	
+	background-color: var(--clr-divbg);
+
 	border-radius: var(--soft-radius);
 	padding: 2rem;
 }
 
-#toggles-section-table td:first-child
-{
+#toggles-section-table td:first-child {
 	width: 100%;
 }
 
-#toggles-section-bg::before
-{
+#toggles-section-bg::before {
 	content: '';
 	position: absolute;
 	display: inline-block;
 	inset: 0;
-	
+
 	border-bottom-right-radius: var(--medium-radius);
-	
+
 	z-index: 7;
-	
+
 	width: 45%;
 	height: 5%;
-	
+
 	background: linear-gradient(45deg, var(--clr-hlhl-gradient));
 }
 
@@ -74,7 +71,7 @@
 #sitelist-section {
 	width: 100%;
 	height: fit-content;
-	
+
 	background-color: var(--clr-divbg);
 	border-radius: var(--soft-radius);
 }
@@ -83,20 +80,21 @@
 /* The placeholder. */
 #placeholder-title {
 	display: block;
-	
+
 	border-radius: calc(var(--medium-radius) - 1px);
 	width: 100%;
 	margin: auto;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
-	
+
 	background-color: var(--clr-placeholderbg);
 	font-size: 28px;
 	font-family: "Roboto Flex", sans-serif;
 	font-weight: 400;
-	
-	
+
+
 	transition: .7s ease-out;
+
 	&:hover {
 		background-color: var(--clr-placeholderbg-hover);
 	}
@@ -124,14 +122,14 @@
 
 	#placeholder-body {
 		outline: dotted 2px var(--clr-placeholderbg-hover);
-		padding-top: 2rem;
-		padding-bottom: 2rem;
+		padding: 2rem 1rem 2rem;
 		margin: auto;
 
-		background-color: hsl( from var(--clr-placeholderbg) h s calc(l - 2));
+		background-color: hsl(from var(--clr-placeholderbg) h s calc(l - 2));
 		border-radius: var(--soft-radius);
 
 		font-family: "Roboto Flex", sans-serif;
+		text-align: justify;
 	}
 }
 
@@ -154,18 +152,45 @@
 		font-size: .8rem;
 	}
 }
+
 /* ?reg */
 
+
+/* Sitelist container */
+/* ¿reg */
+
 #sitelist-container {
+	position: relative;
 	display: grid;
 	grid-template-columns: 3fr 1fr;
+	background:
+		hsl(from var(--clr-placeholderbg) h s calc(l * 0.7));
+
+
+	border: 2px solid var(--clr-placeholderbg-hover);
+	border-radius: var(--soft-radius);
+
+	margin: 2rem;
+	gap: 0.5rem;
+	z-index: 0;
+
 }
 
 #sitelist-header-name,
-#sitelist-header-options
-{
+#sitelist-header-options {
 	display: flex;
+	width: fit-content;
 	justify-content: center;
 	align-content: center;
+
+
 	padding: 1rem 0 1rem;
+	margin: auto;
+
+	&::before {
+		height: 5px;
+		bottom: 7px;
+	}
 }
+
+/* ?reg */
