--- a/page/styles/vars.css
+++ b/page/styles/vars.css
@@ -10,7 +10,7 @@
 	
 	--clr-hl-gradient: #fc6621, #ff59a9;
 	/* brighter gradient */
-	--clr-hlhl-gradient: #ff0000, #0040ff;
+	--clr-hlhl-gradient: #cf5590, #5e61b8;
 	
 	--clr-switch-off: hsl(0, 0%, 10%);
 	--clr-switch-on: hsl(0, 0%, 70%);
