--- a/src/options_page/styles/classes.css
+++ b/src/options_page/styles/classes.css
@@ -355,12 +355,23 @@ body.preload * {
 }
 
 .preset-hitbox {
+	position: relative;
+	cursor: pointer;
+
+	width: 100%;
+	height: 100%;
 	border-radius: var(--hard-radius);
 	outline: dotted 2px var(--clr-placeholderbg-hover);
 }
 
 .preset-name {
+	display: inline-block;
+	top: 15%;
+	user-select: none;
+
+	position: relative;
 	transition: .5s ease-out;
+	z-index: 5;
 }
 
 
