Figured out the login system
Now you get redirected to the login page OR the register page

--- a/src/options_page/styles/classes.css
+++ b/src/options_page/styles/classes.css
@@ -722,6 +722,8 @@ body.preload * {
 
 /* ?reg */
 
+/*About section related*/
+/* ¿reg */
 .about-text {
 	font-size: 1rem;
 	font-family: "Jost", sans-serif;
@@ -738,3 +740,12 @@ body.preload * {
 	margin-bottom: 2rem;
 	padding: 2rem;
 }
+/* ?reg */
+
+
+/**********Login Page************/
+
+
+
+
+
