--- a/src/options_page/styles/ids.css
+++ b/src/options_page/styles/ids.css
@@ -98,6 +98,7 @@
 /*?reg*/
 
 /*About section*/
+/* ¿reg */
 #about-section {
 	width: 100%;
 	height: fit-content;
@@ -120,7 +121,7 @@
 		transform: translateX(-100%);
 	}
 }
-
+/* ?reg */
 
 /* Placeholder grid */
 /* ¿reg */
